// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailNapPeilmerk should not render empty height 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Peilmerk label"
  title="NAP Peilmerk"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Hoogte NAP"
      value=""
    />
    <MapDetailResultItem
      label="Omschrijving"
      value="Peilmerk description"
    />
    <MapDetailResultItem
      label="Windrichting"
      value=""
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailNapPeilmerk should not render without height 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Peilmerk label"
  title="NAP Peilmerk"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Hoogte NAP"
      value=""
    />
    <MapDetailResultItem
      label="Omschrijving"
      value="Peilmerk description"
    />
    <MapDetailResultItem
      label="Windrichting"
      value=""
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailNapPeilmerk should render everything 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Peilmerk label"
  title="NAP Peilmerk"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Hoogte NAP"
      value="123,323 m"
    />
    <MapDetailResultItem
      label="Omschrijving"
      value="Peilmerk description"
    />
    <MapDetailResultItem
      label="Windrichting"
      value="W"
    />
    <MapDetailResultItem
      cm={true}
      label="Muurvlakcoördinaten (cm)"
      value="2, 3"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;
